<resources>
    <string name="app_name">Masterchef_PMDM_AlbaJonathan</string>
    <string name="Correo">Email</string>
    <string name="Contraseña">Password</string>
    <string name="IniciarSesion">Login</string>
    <string name="Registrarse">Sign-in</string>
    <string name="TituloRegistro">SIGN-IN</string>
    <string name="Nombre">Name</string>
    <string name="Apellidos">Last name</string>
    <string name="Departamento">Department</string>
    <string name="Intolerancia">Intolerance</string>
    <string name="EventosActivos">ACTIVE EVENTS</string>
    <string name="EventosPasados">PAST EVENTS</string>
    <string name="Votaciones">POLL</string>
    <string name="EnviarVotaciones">SEND VOTES</string>
    <string name="Presentacion">Presentation:</string>
    <string name="Servicio">"Service: "</string>
    <string name="Sabor">Taste:</string>
    <string name="Imagen">"Image: "</string>
    <string name="Triptico">"Triptych: "</string>
    <string name="GuardarVotacion">SAVE VOTES</string>
    <string name="RealizarVotacion">VOTE</string>

</resources>