<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="horizontal|vertical"
        android:orientation="vertical"
        android:outlineProvider="none"
        android:padding="10dp">
        <!--
        items for a single row of RecyclerView
        -->

        <TextView
            android:id="@+id/idEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Equipo A"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/idPresentacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Presentacion"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/presentacionNP"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/idServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Servicio"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/servicioNP"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/idSabor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sabor"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/saborNP"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/idTriptico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imagen"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/imagenNP"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/idImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Triptico"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/tripticoNP"
            android:layout_width="129dp"
            android:layout_height="49dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botonGuardar"
            android:layout_width="172dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_redondo"
            android:shadowDx="0"
            android:shadowDy="0"

            android:shadowRadius="5"
            android:text="@string/GuardarVotacion"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
