<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#083C3C"
    android:id="@+id/fondo">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistro"
        android:layout_width="222dp"
        android:layout_height="46dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="569dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/boton_redondo"
        android:baselineAligned="false"
        android:shadowColor="#FFFFFF"
        android:text="Registrarse"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="549dp"
        android:text="@string/TituloRegistro"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="333dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="68dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/Nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/Apellidos"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDepartamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/Departamento"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtIntolerancia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:hint="@string/Intolerancia"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/Correo"
                android:textColor="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#FFFFFF"
            app:hintTextColor="#FFFFFF"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/Contraseña"
                android:textColor="#FFFFFF"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>